--- a/frontend/index.html
+++ b/frontend/index.html
@@ -108,11 +108,11 @@
         <p>
           Bonjour, je suis Rémy Tupenot, développeur web full stack junior !
           <br><br>
-          Passionné de développement, j'ai obtenu mon titre de Développeur web et mobile (equivalent Bac +2) et je me suis également formé en autodidacte notamment sur la stack MEAN.
+          Passionné de développement, j'ai obtenu mon titre de Développeur web et mobile (équivalent Bac +2) et je me suis également formé en autodidacte notamment sur la stack MEAN.
           <br><br>
           Je décide de continuer ma formation avec la Wild Code School afin d'obtenir le titre de Concepteur / Développeur d'applications (équivalent Bac +3/4).
           <br><br>
-          Je suis donc actuellement à la recherche d'une alternance en contrat d'apprentissage pour une durée d'un an a partir de février - mars 2022 au rythme de 1 semaine de cours pour 3 semaines en entreprise.
+          Je suis donc actuellement à la recherche d'une alternance en contrat d'apprentissage pour une durée d'un an à partir de février - mars 2022 au rythme de 1 semaine de cours pour 3 semaines en entreprise.
         </p>
       </section>
     </div>
@@ -123,34 +123,7 @@
         Projets
       </h2>
       <section class="projects" id="projects">
-        <!-- Multiple projects following this example -->
-        <!-- <div class="project">
-          <h4 class="projectTitle"> Project 1</h4>
-          <div class="projectContent">
-            <div class="leftSide">
-              <p class="projectDesc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus tenetur ea dicta reprehenderit laborum quidem dolorum sequi, illum eos fuga doloremque placeat possimus officiis sunt iste harum. Expedita, maxime incidunt.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus tenetur ea dicta reprehenderit laborum quidem dolorum sequi, illum eos fuga doloremque placeat possimus officiis sunt iste harum. Expedita, maxime incidunt.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus tenetur ea dicta reprehenderit laborum quidem dolorum sequi, illum eos fuga doloremque placeat possimus officiis sunt iste harum. Expedita, maxime incidunt.
-              </p>
-              
-            </div>
-            <div class="rightSide">
-
-              <img src="./assets/img/green2.jpg" alt="Project Image">
-
-              <div class="linksContainer">
-                <a href="https://github.com/ZooooX" target="blank" class="btn hoversound">
-                  <span>Github</span>
-                  <svg height="24" aria-hidden="true" viewBox="0 0 16 16" version="1.1" width="24" data-view-component="true" class="">
-                    <path fill="white" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
-                  </svg>
-                </a>
-              </div>
-            </div>
-          </div>
-          <p class="projectTechs">TEch Tech Tech</p>
-        </div> -->
+        <!-- Dynamic build -->
       </section>
     </div>
 
