--- a/frontend/index.html
+++ b/frontend/index.html
@@ -106,7 +106,7 @@
       <section class="profileText">
         <img id="photo" src="./assets/img/PhotoLinkedinDetour.png" alt="Photo" width="250px">
         <p>
-          Bonjour, je suis Rémy Tupenot, développeur web full stack junior !
+          Bonjour, je suis Rémy Tupenot, développeur full stack junior !
           <br><br>
           Passionné de développement, j'ai obtenu mon titre de Développeur web et mobile (équivalent Bac +2) et je me suis également formé en autodidacte notamment sur la stack MEAN.
           <br><br>
